# rustwatch

./: Cargo.toml  websites.json
src/: main.rs  monitor.rs  ui.rs
