[package]
name = "rustwatch"
version = "0.1.0"
edition = "2024"

[dependencies]
# Tokio : Le moteur asynchrone.
# "macros" et "rt-multi-thread" sont nécessaires pour que ça tourne efficacement.
tokio = { version = "1", features = ["full"] }

# Reqwest : Le client HTTP
reqwest = { version = "0.13.2" }

# Anyhow : Pour gérer les erreurs
anyhow = "1.0"

ratatui = "0.30.0"
crossterm = "0.29.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"